fix: changed mainImage loading and scrollbar display on phone

--- a/src/components/MainPicture/MainPicture.scss
+++ b/src/components/MainPicture/MainPicture.scss
@@ -9,6 +9,9 @@
     font-size: 24px;
     color: var(--white);
   }
+  .loadingImage {
+    filter: blur(8px);
+  }
 }
 
 @media (max-width: 1179.98px) {
